Fix gradle build in case of missing properties

--- a/build.gradle
+++ b/build.gradle
@@ -44,11 +44,11 @@ uploadArchives {
             beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
 
             repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-                authentication(userName: ossrhUsername, password: ossrhPassword)
+                //authentication(userName: ossrhUsername, password: ossrhPassword)
             }
 
             snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
-                authentication(userName: ossrhUsername, password: ossrhPassword)
+                //authentication(userName: ossrhUsername, password: ossrhPassword)
             }
 
             pom.project {
@@ -119,8 +119,8 @@ test {
 }
 
 nexusStaging {
-    username "$NEXUS_USERNAME"
-    password "$NEXUS_PASSWORD"
+    //username "$NEXUS_USERNAME"
+    //password "$NEXUS_PASSWORD"
 }
 
 jar.dependsOn(check)
