--- a/.gitignore
+++ b/.gitignore
@@ -21,36 +21,12 @@
 # Gradle:
 .idea/**/gradle.xml
 .idea/**/libraries
+.idea/**/modules
+.idea/modules.xml
 
-# CMake
-cmake-build-debug/
-cmake-build-release/
+# Other:
+.idea/vcs.xml
 
-# Mongo Explorer plugin:
-.idea/**/mongoSettings.xml
-
-## File-based project format:
-*.iws
-
-## Plugin-specific files:
-
-# IntelliJ
-out/
-
-# mpeltonen/sbt-idea plugin
-.idea_modules/
-
-# JIRA plugin
-atlassian-ide-plugin.xml
-
-# Cursive Clojure plugin
-.idea/replstate.xml
-
-# Crashlytics plugin (for Android Studio and IntelliJ)
-com_crashlytics_export_strings.xml
-crashlytics.properties
-crashlytics-build.properties
-fabric.properties
 ### Gradle template
 .gradle
 /build/
